--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark-theme">
+  <head>
+    <meta charset="utf-8" />
+    <title>Angular on Firebase Hosting</title>
 
-<head>
-  <meta charset="utf-8" />
-  <title>Ionic App</title>
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Angular on Firebase Hosting" />
+    <meta name="description" content="Angular on Firebase Hosting" />
 
-  <base href="/" />
-
-  <meta name="color-scheme" content="light dark" />
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="format-detection" content="telephone=no" />
-  <meta name="msapplication-tap-highlight" content="no" />
-
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
-
-  <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-</head>
-
-<body>
-  <app-root></app-root>
-</body>
-
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="top-gradient"></div>
+    <div class="dots"></div>
+    <app-root></app-root>
+    <div class="bottom-gradient"></div>
+  </body>
 </html>
